Increase number of designate workers
By default oslo.service spawn 1 worker which is not enough,
increase designate workers to 12 API pods and 16 workers.

Related-Prod: PRODX-36708
Change-Id: I47a41a1c12f9808f2c134deeb1f859e118848028

--- a/openstack_controller/templates/size/medium.yaml
+++ b/openstack_controller/templates/size/medium.yaml
@@ -479,7 +479,7 @@ services:
       values:
         pod:
           replicas:
-            api: 3
+            api: 12
             central: 3
             mdns: 3
             producer: 3
@@ -504,6 +504,16 @@ services:
           designate:
             service:api:
               workers: 4
+            service:central:
+              workers: 16
+            service:mdns:
+              workers: 16
+            service:producer:
+              workers: 16
+            service:sink:
+              workers: 16
+            service:worker:
+              workers: 16
   dashboard:
     horizon:
       values:
