--- a/openstack_controller/templates/size/small.yaml
+++ b/openstack_controller/templates/size/small.yaml
@@ -464,10 +464,20 @@ services:
         conf:
           apache_wsgi:
             config:
-              processes: 2
+              processes: 4
           designate:
             service:api:
-              workers: 2
+              workers: 4
+            service:central:
+              workers: 4
+            service:mdns:
+              workers: 4
+            service:producer:
+              workers: 4
+            service:sink:
+              workers: 4
+            service:worker:
+              workers: 4
   dashboard:
     horizon:
       values:
