Drop ALL capabilities for controller and exporter
Related-Prod: PRODX-34746
Change-Id: Id60c21d21da9f57b6ed09b1aeaccc0ec980de54f

--- a/charts/openstack-operator/templates/exporter.yaml
+++ b/charts/openstack-operator/templates/exporter.yaml
@@ -67,12 +67,16 @@ spec:
         component: exporter
     spec:
       serviceAccountName: openstack-controller-exporter-account
+      securityContext:
+        {{- toYaml .Values.exporter.pod.exporter.security_context | nindent 8 }}
       containers:
         - name: exporter
           image: {{ tuple . .Values.image | include "getImageUrl" }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command:
             {{- toYaml .Values.exporter.cmd | nindent 10 }}
+          securityContext:
+            {{- toYaml .Values.exporter.pod.exporter.exporter.security_context | nindent 12 }}
           env:
             {{- range $optionName, $optionValue := .Values.exporter.settings.raw }}
             - name: {{ $optionName }}
