Drop privileges for admission controller
Related-Prod: PRODX-34748
Change-Id: I520ed48d0329725170faa2f4307d3aefd0b5d1f7
(cherry picked from commit 129c55020d70086e08a36470af51aa2f3bc8772e)

--- a/charts/openstack-operator/values.yaml
+++ b/charts/openstack-operator/values.yaml
@@ -154,6 +154,17 @@ admission:
   enabled: true
   replicaCount: 1
   cluster_domain_suffix: cluster.local
+  pod:
+    controller:
+      security_context:
+        runAsUser: 42424
+        runAsNonRoot: true
+      admission:
+        security_context:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
 
 node_maintenance:
   create_crd: true
