Fix security context for ensure-resources job
Related-Prod: PRODX-34747
Change-Id: I51b67b6a2204e726b24e4260be8b6a388aaf5561
(cherry picked from commit 992d17d665c70312b10e2730985db814e397faaa)

--- a/charts/openstack-operator/templates/job-ensure-resources.yaml
+++ b/charts/openstack-operator/templates/job-ensure-resources.yaml
@@ -103,6 +103,8 @@ spec:
     spec:
       serviceAccountName: {{ include "openstack-controller.fullname" . }}-resources
       restartPolicy: OnFailure
+      securityContext:
+        {{- toYaml .Values.osdpl.pod.ensure_resources.security_context | nindent 8 }}
       containers:
       - name: main
         command:
@@ -116,6 +118,8 @@ spec:
         - mountPath: /etc/resources
           name: deploy-resources-bin
           readOnly: true
+        securityContext:
+          {{- toYaml .Values.osdpl.pod.ensure_resources.ensure_resources.security_context | nindent 10 }}
       volumes:
       - name: deploy-resources-bin
         configMap:
