Drop all capabilities for image-precaching
Related-Prod: https://mirantis.jira.com/browse/PRODX-34725
Change-Id: I9286342808efeb7aec121a6eecd82accb33a0275

--- a/openstack_controller/templates/native/cache.yaml
+++ b/openstack_controller/templates/native/cache.yaml
@@ -41,7 +41,7 @@ spec:
         securityContext:
           capabilities:
             drop:
-            - NET_RAW
+            - ALL
 {%- endfor %}
       securityContext:
         runAsNonRoot: true
