--- a/tests/fixtures/cache_images.yaml
+++ b/tests/fixtures/cache_images.yaml
@@ -41,7 +41,7 @@ spec:
         securityContext:
           capabilities:
             drop:
-            - NET_RAW
+            - ALL
       - command:
         - /bin/sleep
         - '86400000'
@@ -50,7 +50,7 @@ spec:
         securityContext:
           capabilities:
             drop:
-            - NET_RAW
+            - ALL
       - command:
         - /bin/sleep
         - '86400000'
@@ -59,7 +59,7 @@ spec:
         securityContext:
           capabilities:
             drop:
-            - NET_RAW
+            - ALL
       - command:
         - /bin/sleep
         - '86400000'
@@ -68,7 +68,7 @@ spec:
         securityContext:
           capabilities:
             drop:
-            - NET_RAW
+            - ALL
       securityContext:
         runAsNonRoot: true
         runAsUser: 65534
