Pass os controller deployment namespace correctly
Pick up namespace from the chart release.

Related-Prod: PRODX-36835
Change-Id: I316caaaa9af3ce21ca7f2fb6a45a008fcf6b7e51

--- a/charts/openstack-operator/templates/exporter.yaml
+++ b/charts/openstack-operator/templates/exporter.yaml
@@ -78,6 +78,7 @@ spec:
           securityContext:
             {{- toYaml .Values.exporter.pod.exporter.exporter.security_context | nindent 12 }}
           env:
+{{ tuple . | include "openstack-controller.common_env" | indent 12 }}
             {{- range $optionName, $optionValue := .Values.exporter.settings.raw }}
             - name: {{ $optionName }}
               value: "{{ $optionValue }}"
