Enable amqp tls port 5671 for connection from ouside
When rabbitmq is exposed externally clients may connect to both
5672 and 5671 ports.

Related-Prod: PRODX-36838
Change-Id: Iddb91a82a641c7da9868ef8b85ffc69a02895c80

--- a/openstack_controller/templates/base/network_policies/messaging.yaml
+++ b/openstack_controller/templates/base/network_policies/messaging.yaml
@@ -1,3 +1,4 @@
+{%- from 'macros/connections.j2' import from_all %}
 {%- from 'macros/connections.j2' import from_pod_networks %}
 {%- from 'macros/connections.j2' import from_namespaces %}
 {%- set lma_ns_list = ["lma_deployment"] | namespaces  %}
@@ -13,7 +14,9 @@
             ingress:
 {{ network_policies["ingress"][rabbitmq_server] | toyaml | indent(14, first=True) }}
               - from:
-{{ from_pod_networks(pod_networks, service_childs[rabbitmq_server].get_np_ports(["amqp"])) | indent(16) }}
+{{ from_pod_networks(pod_networks, service_childs[rabbitmq_server].get_np_ports(["amqp", "amqp-tls"])) | indent(16) }}
+              - from:
+{{ from_all(service_childs[rabbitmq_server].get_np_ports(["amqp", "amqp-tls"])) | indent(16) }}
               - from:
 {{ from_namespaces(lma_ns_list) | indent(16) }}
         exporter:
