--- a/tests/fixtures/render_service_template/output/messaging/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/messaging/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -512,6 +512,16 @@ spec:
                 - ipBlock:
                     cidr: 192.168.0.0/16
                 ports:
+                - port: 5671
+                  protocol: TCP
+                - port: 5672
+                  protocol: TCP
+              - from:
+                - ipBlock:
+                    cidr: 0.0.0.0/0
+                ports:
+                - port: 5671
+                  protocol: TCP
                 - port: 5672
                   protocol: TCP
               - from:
