Enable access from Neutron ironic-agent to Ironic API
Related-Prod: PRODX-34773
Change-Id: If8de5ca410e6ea63aee79043fd49fa9f71b5d16c

--- a/tests/fixtures/network_policies/output/baremetal.yaml
+++ b/tests/fixtures/network_policies/output/baremetal.yaml
@@ -18,6 +18,10 @@ baremetal:ironic:Deployment:ironic-api:
         component: server
   - podSelector:
       matchLabels:
+        application: neutron
+        component: ironic-agent
+  - podSelector:
+      matchLabels:
         application: heat
         component: engine
   - podSelector:
