--- a/openstack_controller/templates/child_objects/networking.yaml
+++ b/openstack_controller/templates/child_objects/networking.yaml
@@ -272,6 +272,7 @@ neutron:
           - {{ to_child_object("networking", "rabbitmq", "StatefulSet", "openstack-neutron-rabbitmq-rabbitmq", ["amqp"]) | indent(12)}}
           - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
           - {{ to_child_object("placement", "placement", "Deployment", "placement-api", ["p-api"]) | indent(12)}}
+          - {{ to_child_object("baremetal", "ironic", "Deployment", "ironic-api", ["m-api"]) | indent(12)}}
       hash_fields: []
       images:
       - neutron_ironic_agent
