--- a/openstack_controller/templates/services/redis.yaml
+++ b/openstack_controller/templates/services/redis.yaml
@@ -18,6 +18,16 @@ spec:
                 values:
                 - redis
           topologyKey: "kubernetes.io/hostname"
+    containerSecurityContext:
+      allowPrivilegeEscalation: false
+      capabilities:
+        drop:
+        - ALL
+      privileged: false
+      readOnlyRootFilesystem: true
+      runAsGroup: 65534
+      runAsNonRoot: true
+      runAsUser: 65534
     customConfig:
       - "save 600 1"
       - "save 300 10"
@@ -29,6 +39,11 @@ spec:
     image: {{ images["redis-failover"] }}
 {%- endif %}
     replicas: 3
+    securityContext:
+      fsGroup: 65534
+      runAsGroup: 65534
+      runAsNonRoot: true
+      runAsUser: 65534
     storage:
       keepAfterDeletion: true
       persistentVolumeClaim:
@@ -63,6 +78,32 @@ spec:
                 values:
                 - sentinel
           topologyKey: "kubernetes.io/hostname"
+    configCopy:
+      containerSecurityContext:
+        allowPrivilegeEscalation: false
+        capabilities:
+          drop:
+          - ALL
+        privileged: false
+        readOnlyRootFilesystem: true
+        runAsGroup: 65534
+        runAsNonRoot: true
+        runAsUser: 65534
+    containerSecurityContext:
+      allowPrivilegeEscalation: false
+      capabilities:
+        drop:
+        - ALL
+      privileged: false
+      readOnlyRootFilesystem: true
+      runAsGroup: 65534
+      runAsNonRoot: true
+      runAsUser: 65534
+    securityContext:
+      fsGroup: 65534
+      runAsGroup: 65534
+      runAsNonRoot: true
+      runAsUser: 65534
     customConfig:
       - "down-after-milliseconds 2000"
       - "failover-timeout 10000"
