--- a/tests/fixtures/render_service_template/output/redis/ussuri_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/redis/ussuri_ceph_local_non_dvr.yaml
@@ -22,6 +22,16 @@ spec:
               values:
               - redis
           topologyKey: kubernetes.io/hostname
+    containerSecurityContext:
+      allowPrivilegeEscalation: False
+      capabilities:
+        drop:
+        - ALL
+      privileged: False
+      readOnlyRootFilesystem: True
+      runAsGroup: 65534
+      runAsNonRoot: True
+      runAsUser: 65534
     customConfig:
     - save 600 1
     - save 300 10
@@ -30,6 +40,11 @@ spec:
     - client-output-buffer-limit slave 512mb 512mb 0
     image: redis-failover:latest
     replicas: 3
+    securityContext:
+      fsGroup: 65534
+      runAsGroup: 65534
+      runAsNonRoot: True
+      runAsUser: 65534
     storage:
       keepAfterDeletion: true
       persistentVolumeClaim:
@@ -64,9 +79,35 @@ spec:
               values:
               - sentinel
           topologyKey: kubernetes.io/hostname
+    configCopy:
+      containerSecurityContext:
+        allowPrivilegeEscalation: False
+        capabilities:
+          drop:
+          - ALL
+        privileged: False
+        readOnlyRootFilesystem: True
+        runAsGroup: 65534
+        runAsNonRoot: True
+        runAsUser: 65534
+    containerSecurityContext:
+      allowPrivilegeEscalation: False
+      capabilities:
+        drop:
+        - ALL
+      privileged: False
+      readOnlyRootFilesystem: True
+      runAsGroup: 65534
+      runAsNonRoot: True
+      runAsUser: 65534
     customConfig:
     - down-after-milliseconds 2000
     - failover-timeout 10000
     - parallel-syncs 1
     image: redis-failover:latest
     replicas: 3
+    securityContext:
+      fsGroup: 65534
+      runAsGroup: 65534
+      runAsNonRoot: True
+      runAsUser: 65534
