Apply securityContest for init contaienrs
* Drop ALL capabilities
* Add runAsUser explicitly

Related-Prod: PRODX-36911
Change-Id: I767751eadee3c2f0f4e838c87a6b88cc58c8db6f

--- a/charts/openstack-operator/templates/openstack-controller.yaml
+++ b/charts/openstack-operator/templates/openstack-controller.yaml
@@ -62,6 +62,8 @@ spec:
 {{ tuple . | include "openstack-controller.common_env" | indent 12 }}
           image: {{ tuple . .Values.image | include "getImageUrl" }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          securityContext:
+            {{- toYaml .Values.osdpl.pod.controller.remove_default_finalizer.security_context | nindent 12 }}
         - name: convert-credential-secrets
           command:
           - osctl-convert-credential-secrets
@@ -69,6 +71,8 @@ spec:
 {{ tuple . | include "openstack-controller.common_env" | indent 12 }}
           image: {{ tuple . .Values.image | include "getImageUrl" }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          securityContext:
+            {{- toYaml .Values.osdpl.pod.controller.convert_credentials.security_context | nindent 12 }}
       containers:
         - name: osdpl
           image: {{ tuple . .Values.image | include "getImageUrl" }}
