Do not evacuate all instances in case of host crash
The default value is too dangerous, and when enabled there
is no way to preven masakari from specific instance evacuation.

Related-Prod: PRODX-37012
Change-Id: Ib8ccf4e9809d52448ed0bffd8cabef34ca1e305a

--- a/openstack_controller/templates/services/instance-ha.yaml
+++ b/openstack_controller/templates/services/instance-ha.yaml
@@ -59,6 +59,10 @@ spec:
             {%- if spec.openstack_version not in ("queens", "rocky", "stein") %}
             service_type: instance-ha
             {%- endif %}
+          host_failure:
+            # NOTE(vsaienko): Do not evacuate all instances, make sure user added tag explicitly
+            evacuate_all_instances: false
+            ignore_instances_in_error_state: true
 {% include 'base/_oslo_policy_enforce_defaults.yaml' %}
         logging:
           logger_masakari:
