Pass cinder keyring key to chart via values
Related-Prod: PRODX-37010
Change-Id: I50e6246b22b4ce9de90ac558a3fea085830d2a71

--- a/openstack_controller/templates/services/block-storage.yaml
+++ b/openstack_controller/templates/services/block-storage.yaml
@@ -152,6 +152,9 @@ spec:
     {%- endif %}
   {%- endfor %}
         ceph:
+          keyrings:
+            {{ ceph.cinder.username }}:
+              key: {{ ceph.cinder.keyring }}
           pools:
             backup:
               replication: 1
