[OVN] Make neutron metadata agent privileged
With ovn it needs ability to manage netnamespaces and haproxy
processes.

Related-Prod: https://mirantis.jira.com/browse/PRODX-37126
Change-Id: I98ad3e49deeade35a3078f34387884ed38824f15
(cherry picked from commit 7211526f644bbff6ffd9ab143c5a42f28f9b0b61)

--- a/openstack_controller/templates/services/networking.yaml
+++ b/openstack_controller/templates/services/networking.yaml
@@ -555,6 +555,14 @@ spec:
                     defaultMode: 0444
         {%- endif %}
       {%- endif %}
+      {%- if ovn_enabled %}
+        security_context:
+          neutron_metadata_agent:
+            container:
+              neutron_metadata_agent:
+                privileged: true
+                allowPrivilegeEscalation: true
+      {%- endif %}
       dependencies:
         static:
           db_init:
