--- a/tests/fixtures/render_service_template/output/networking/victoria_ceph_local_ovn_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/networking/victoria_ceph_local_ovn_non_dvr.yaml
@@ -597,5 +597,11 @@ spec:
                   timeoutSeconds: 30
           rpc_retries: 2
           rpc_timeout: 30
+        security_context:
+          neutron_metadata_agent:
+            container:
+              neutron_metadata_agent:
+                privileged: true
+                allowPrivilegeEscalation: true
         use_fqdn:
           neutron_agent: false
