Set network policies enabled by default
The Network policy support is enabled for OS start from Yoga
release.

Related-Prod: PRODX-37129
Change-Id: If9b47f6a944151c2c988ee7862dedc45eb878e15

--- a/charts/openstack-operator/values.yaml
+++ b/charts/openstack-operator/values.yaml
@@ -169,7 +169,7 @@ admission:
   replicaCount: 1
   cluster_domain_suffix: cluster.local
   network_policy:
-    enabled: false
+    enabled: true
   settings:
     raw:
       OSCTL_ADMISSION_BIND_PORT: 8443
@@ -289,4 +289,4 @@ exporter:
     raw:
       OSCTL_EXPORTER_BIND_PORT: 9102
   network_policy:
-    enabled: false
+    enabled: true
