--- a/openstack_controller/templates/services/database.yaml
+++ b/openstack_controller/templates/services/database.yaml
@@ -89,7 +89,7 @@ spec:
         deployment_controller: true
         service_master: true
         secret_ca_bundle: true
-        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
+        network_policy: {{ spec.features.network_policies.enabled }}
       network:
         proxy:
 {% include 'base/_proxy_vars.yaml' %}
@@ -152,7 +152,7 @@ spec:
             server: {{ backup_params['pv_nfs']['server'] }}
             path: {{ backup_params['pv_nfs']['path'] }}
           {%- endif %}
-{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+{%- if spec.features.network_policies.enabled %}
       network_policy:
 {% include 'base/network_policies/database.yaml' %}
 {%- endif %}
