--- a/openstack_controller/templates/services/placement.yaml
+++ b/openstack_controller/templates/services/placement.yaml
@@ -71,9 +71,9 @@ spec:
           logger_placement:
             level: {{ spec.get('features', {}).get('logging', {}).get('placement', {}).get('level', 'INFO') }}
       manifests:
-        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
+        network_policy: {{ spec.features.network_policies.enabled }}
         secret_ca_bundle: true
-{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+{%- if spec.features.network_policies.enabled %}
       network_policy:
 {% include 'base/network_policies/placement.yaml' %}
 {%- endif %}
