--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_dvr_onermq/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_dvr_onermq/context_spec.yaml
@@ -11,6 +11,8 @@ features:
   database:
     local_volumes:
       enabled: true
+  network_policies:
+    enabled: false
   neutron:
     backend: ml2
     dns_servers:
