--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_tf_adv/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_tf_adv/context_spec.yaml
@@ -44,6 +44,8 @@ features:
   messaging:
     components_with_dedicated_messaging:
     - networking
+  network_policies:
+    enabled: false
   neutron:
     backend: tungstenfabric
     dns_servers:
