--- a/tests/fixtures/render_service_template/input/victoria_ceph_local_non_dvr/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/victoria_ceph_local_non_dvr/context_spec.yaml
@@ -14,6 +14,8 @@ features:
   messaging:
     components_with_dedicated_messaging:
     - networking
+  network_policies:
+    enabled: false
   keystone:
     domain_specific_configuration:
       enabled: true
