--- a/tests/fixtures/render_service_template/input/victoria_ceph_local_ovn_non_dvr/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/victoria_ceph_local_ovn_non_dvr/context_spec.yaml
@@ -46,6 +46,8 @@ features:
               user_mail_attribute: mail
               user_name_attribute: uid
               user_objectclass: inetOrgPerson
+  network_policies:
+    enabled: false
   neutron:
     backend: ml2/ovn
     dns_servers:
