--- a/openstack_controller/templates/services/coordination.yaml
+++ b/openstack_controller/templates/services/coordination.yaml
@@ -19,8 +19,8 @@ spec:
 {%- endfor %}
       manifests:
         cron_job_db_compact: true
-        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
-{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+        network_policy: {{ spec.features.network_policies.enabled }}
+{%- if spec.features.network_policies.enabled %}
       network_policy:
 {% include 'base/network_policies/coordination.yaml' %}
 {%- endif %}
