--- a/openstack_controller/templates/services/ingress.yaml
+++ b/openstack_controller/templates/services/ingress.yaml
@@ -58,7 +58,7 @@ spec:
                   initialDelaySeconds: 10
                   timeoutSeconds: 5
       manifests:
-        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
+        network_policy: {{ spec.features.network_policies.enabled }}
 {%- if is_tls_proxy_enabled %}
         tls_proxy: true
 {%- endif %}
@@ -83,7 +83,7 @@ spec:
             proxy:
               default: 443
 {%- endif %}
-{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+{%- if spec.features.network_policies.enabled %}
       network_policy:
 {% include 'base/network_policies/ingress.yaml' %}
 {%- endif %}
