--- a/openstack_controller/templates/services/instance-ha.yaml
+++ b/openstack_controller/templates/services/instance-ha.yaml
@@ -74,13 +74,13 @@ spec:
           db_init:
             jobs:
               - openstack-mariadb-cluster-wait
-{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+{%- if spec.features.network_policies.enabled %}
       network_policy:
 {% include 'base/network_policies/instance-ha.yaml' %}
 {%- endif %}
       manifests:
         cron_job_db_purge: true
-        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
+        network_policy: {{ spec.features.network_policies.enabled }}
         job_rabbit_init: false
         secret_ca_bundle: true
       endpoints:
