--- a/openstack_controller/templates/services/memcached.yaml
+++ b/openstack_controller/templates/services/memcached.yaml
@@ -25,10 +25,10 @@ spec:
           enabled: true
   {%- endif %}
       manifests:
-        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
+        network_policy: {{ spec.features.network_policies.enabled }}
         statefulset: true
         deployment: false
-{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+{%- if spec.features.network_policies.enabled %}
       network_policy:
 {% include 'base/network_policies/memcached.yaml' %}
 {%- endif %}
