--- a/openstack_controller/templates/services/metric.yaml
+++ b/openstack_controller/templates/services/metric.yaml
@@ -128,12 +128,12 @@ spec:
           db_init:
             jobs:
               - openstack-mariadb-cluster-wait
-{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+{%- if spec.features.network_policies.enabled %}
       network_policy:
 {% include 'base/network_policies/metric.yaml' %}
 {%- endif %}
       manifests:
-        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
+        network_policy: {{ spec.features.network_policies.enabled }}
         job_rabbit_init: false
         secret_ca_bundle: true
         job_storage_init: false
