--- a/openstack_controller/templates/services/orchestration.yaml
+++ b/openstack_controller/templates/services/orchestration.yaml
@@ -55,13 +55,13 @@ spec:
           db_init:
             jobs:
               - openstack-mariadb-cluster-wait
-{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+{%- if spec.features.network_policies.enabled %}
       network_policy:
 {% include 'base/network_policies/orchestration.yaml' %}
 {%- endif %}
       manifests:
         cron_job_db_purge: true
-        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
+        network_policy: {{ spec.features.network_policies.enabled }}
         job_rabbit_init: false
         secret_ca_bundle: true
         job_heat_trusts: false
