--- a/openstack_controller/templates/services/shared-file-system.yaml
+++ b/openstack_controller/templates/services/shared-file-system.yaml
@@ -179,7 +179,7 @@ spec:
             {{ ssh_credentials.private|indent(12)|trim }}
           public: |
             {{ ssh_credentials.public }}
-{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+{%- if spec.features.network_policies.enabled %}
       network_policy:
 {% include 'base/network_policies/shared-file-system.yaml' %}
 {%- endif %}
@@ -188,4 +188,4 @@ spec:
         cron_job_db_purge: {{ manila_db_cleanup.enabled }}
         daemonset_share: true
         service_instance_ssh_key: true
-        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
+        network_policy: {{ spec.features.network_policies.enabled }}
