--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_bgpvpn_rr/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_bgpvpn_rr/context_spec.yaml
@@ -21,6 +21,8 @@ features:
   messaging:
     components_with_dedicated_messaging:
     - networking
+  network_policies:
+    enabled: false
   neutron:
     backend: ml2
     bgpvpn:
