--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_db_cleanup/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_db_cleanup/context_spec.yaml
@@ -43,6 +43,8 @@ features:
   messaging:
     components_with_dedicated_messaging:
     - networking
+  network_policies:
+    enabled: false
   neutron:
     backend: ml2
     dns_servers:
