--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_telemetry_rmq/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_telemetry_rmq/context_spec.yaml
@@ -22,6 +22,8 @@ features:
     - orchestration
     - load-balancer
     - key-manager
+  network_policies:
+    enabled: false
   neutron:
     backend: ml2
     dns_servers:
