--- a/tests/fixtures/render_service_template/input/ussuri_glance_cinder_rbd_non_dvr/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_glance_cinder_rbd_non_dvr/context_spec.yaml
@@ -20,6 +20,8 @@ features:
   messaging:
     components_with_dedicated_messaging:
     - networking
+  network_policies:
+    enabled: false
   neutron:
     backend: ml2
     dns_servers:
