--- a/tests/fixtures/render_service_template/input/victoria_ceph_local_non_dvr_db_nfs_backup/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/victoria_ceph_local_non_dvr_db_nfs_backup/context_spec.yaml
@@ -53,6 +53,8 @@ features:
               user_mail_attribute: mail
               user_name_attribute: uid
               user_objectclass: inetOrgPerson
+  network_policies:
+    enabled: false
   neutron:
     backend: ml2
     dns_servers:
