--- a/tests/fixtures/render_service_template/input/victoria_ceph_local_tf_driver_tf/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/victoria_ceph_local_tf_driver_tf/context_spec.yaml
@@ -15,6 +15,8 @@ features:
   messaging:
     components_with_dedicated_messaging:
     - networking
+  network_policies:
+    enabled: false
   neutron:
     backend: tungstenfabric
     dns_servers:
