Enable libvirt self-announce for ovs only
Add yoga render tests.

Related-PRODX: PRODX-35785
Change-Id: Ia039cb5343eb54779e93de8e96201090122b9ea1

--- a/openstack_controller/templates/services/compute.yaml
+++ b/openstack_controller/templates/services/compute.yaml
@@ -801,12 +801,13 @@ spec:
             live_migration_wait_for_vif_plug: false
           workarounds:
             skip_migration_revert_events: true
-{%- if spec.openstack_version not in ("queens", "rocky", "stein", "train", "ussuri", "victoria", "wallaby", "xena") %}
-            enable_qemu_monitor_announce_self: true
-{%- endif %}
           os_vif_contrail_vrouter:
             vrouter_port: {{ vrouter_port }}
 {%- else %}
+{%- if spec.openstack_version not in ("queens", "rocky", "stein", "train", "ussuri", "victoria", "wallaby", "xena") %}
+          workarounds:
+            enable_qemu_monitor_announce_self: true
+{%- endif %}
           os_vif_ovs:
             isolate_vif: true
 {%- endif %}
