Grant NET_RAW for octavia nic init before yoga
When calling iptables from focal image (openvswitch 2.13) which is used
prior yoga, NET_RAW is required.

Related-Prod: PRODX-37293
Change-Id: Ib2b899b431b67221a9ecbfc0434abf47dea7ac9d

--- a/openstack_controller/templates/services/load-balancer.yaml
+++ b/openstack_controller/templates/services/load-balancer.yaml
@@ -93,6 +93,20 @@ spec:
             jobs:
               - openstack-mariadb-cluster-wait
       pod:
+        {%- if spec.openstack_version in ['queens', 'rocky', 'stein', 'train', 'ussuri', 'victoria', 'wallaby', 'xena'] %}
+        security_context:
+          octavia_health_manager:
+            container:
+              nic_init:
+                capabilities:
+                  add:
+                   # Add NET_RAW as required for focal 2.13 openvswitch image and kernel on the host PRODX-37293
+                   - NET_RAW
+                   - NET_ADMIN
+                   - DAC_OVERRIDE
+                  drop:
+                   - ALL
+        {%- endif %}
         replicas:
           worker: 3
           housekeeping: 3
