--- a/tests/fixtures/render_service_template/output/load-balancer/ussuri_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/load-balancer/ussuri_ceph_local_non_dvr.yaml
@@ -232,6 +232,18 @@ spec:
               pool_start: 192.168.0.1
               range: 192.168.0.0/24
       pod:
+        security_context:
+          octavia_health_manager:
+            container:
+              nic_init:
+                capabilities:
+                  add:
+                   # Add NET_RAW as required for focal 2.13 openvswitch image and kernel on the host PRODX-37293
+                   - NET_RAW
+                   - NET_ADMIN
+                   - DAC_OVERRIDE
+                  drop:
+                   - ALL
         mounts:
           octavia_api:
             octavia_api:
