Grant NET_RAW for octavia nic init before yoga
When calling iptables from focal image (openvswitch 2.13) which is used
prior yoga, NET_RAW is required.

Related-Prod: PRODX-37293
Change-Id: Ib2b899b431b67221a9ecbfc0434abf47dea7ac9d

--- a/tests/fixtures/render_service_template/output/load-balancer/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/load-balancer/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -232,6 +232,18 @@ spec:
               pool_start: 10.255.1.0
               range: 10.255.0.0/16
       pod:
+        security_context:
+          octavia_health_manager:
+            container:
+              nic_init:
+                capabilities:
+                  add:
+                   # Add NET_RAW as required for focal 2.13 openvswitch image and kernel on the host PRODX-37293
+                   - NET_RAW
+                   - NET_ADMIN
+                   - DAC_OVERRIDE
+                  drop:
+                   - ALL
         mounts:
           octavia_api:
             octavia_api:
